# yukon

./: .gitignore  CMakeLists.txt  main.c
src/: LD.c  LD.h  Phases.c  Phases.h  SI.c  SI.h  SR.c  SR.h  SW.c  SW.h  board.c  board.h  carddeck.c  carddeck.h  columns.c  columns.h  gameLoader.c  gameLoader.h  main.c  mouseTools.c  mouseTools.h  renderTools.c  renderTools.h
src/lib/cmake/SDL2/: sdl2-config.cmake
src/lib/cmake/SDL2_image/: sdl2_image-config.cmake
